# dataagent

./: LICENSE  README.md
.github/workflows/: deploy-frontend.yml
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/src/: __init__.py  main.py
api/src/api/: __init__.py  auth.py  dependencies.py  main.py  models.py  monitoring.py
api/src/api/routers/: __init__.py  chat.py  threads.py
api/src/api/util/: __init__.py  search_client.py
api/src/entities/: __init__.py  models.py
api/src/entities/chat_agent/: __init__.py  agent.py  executor.py  prompt.md
api/src/entities/data_agent/: __init__.py  agent.py  executor.py  prompt.md
api/src/entities/data_agent/tools/: __init__.py  search.py  sql.py
api/src/entities/workflow/: __init__.py  builder.py  workflow.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  staticwebapp.config.json
frontend/components/auth/: msalAuthProvider.tsx
frontend/lib/: msalConfig.ts
infra/: README.md
infra/public-networking/: workload.tf
scripts/: run-api.sh
